# cosmos-message-lib

./: .coveragerc  .gitignore  README.md  pyproject.toml
.github/workflows/: ci.yaml
cosmos_message_lib/: __init__.py  connection.py  consumer.py  enums.py  producer.py  schemas.py
cosmos_schemas/: __init__.py
message_lib/: __init__.py  consumer.py  producer.py
tests/: conftest.py  test_consumer.py  test_producer.py
