[tool.poetry]
name = "cosmos-message-lib"
version = "1.1.2"
readme = "README.md"
packages = [{include = "cosmos_message_lib"}]
description = "helpers functions and schemas for setting up activities pub/sub with kombu and rabbitmq"
authors = ["Bink <bink@bink.bink>"]
repository = "https://github.com/binkhq/cosmos-message-lib"
keywords = ["kombu", "rabbitmq", "pydantic"]
classifiers = [
    'Development Status :: 5 - Production/Stable',
    'Intended Audience :: Developers',
    'Natural Language :: English',
    'Programming Language :: Python :: 3',
    'Programming Language :: Python :: 3.10',
]

[tool.poetry.dependencies]
python = "^3.10"
rabbitmq = "^0.2.0"
kombu = "^5.2.4"
pydantic = "^1.9.1"

[tool.poetry.group.dev.dependencies]
pylint = "^2.14.1"
mypy = "^0.961"
black = "^22.3.0"
isort = "^5.10.1"
xenon = "^0.9.0"
ipython = "^8.4.0"
pytest = "^7.1.2"
pylint-pytest = "^1.1.2"
pytest-mock = "^3.7.0"
pytest-cov = "^3.0.0"

[build-system]
requires = ["poetry-core>=1.0.8"]
build-backend = "poetry.core.masonry.api"

[tool.black]
line-length = 120

[tool.isort]
profile = "black"
multi_line_output = 3
include_trailing_comma = true
force_grid_wrap = 0
use_parentheses = true
ensure_newline_before_comments = true
line_length = 120
skip_gitignore = false
lines_between_types = 1

[tool.mypy]
disallow_untyped_defs = true
show_error_codes = true
warn_unused_ignores = true
ignore_missing_imports = true
plugins = [
    "pydantic.mypy",
]

[tool.pylint.MASTER]
load-plugins=[
    "pylint_pytest",
    "pylint.extensions.mccabe"
]

[tool.pylint.messages_control]
max-line-length = 120
disable = [
    "missing-module-docstring",
    "missing-function-docstring",
    "missing-class-docstring",
    "too-few-public-methods",
]
good-names=["k", "v", "i", "q", "fn", "ex"]
extension-pkg-whitelist=[
    "pydantic",
]
