[tool.poetry]
name = "cosmos-message-lib"
version = "0.0.0"
readme = "README.md"
packages = [
    {include = "message_lib"},
    {include = "cosmos_schemas"},

]
description = "helpers functions and schemas for setting up activities pub/sub with kombu and rabbitmq"
authors = ["Bink <bink@bink.bink>"]
repository = "https://github.com/binkhq/cosmos-message-lib"
keywords = ["kombu", "rabbitmq", "pydantic", "loguru"]
classifiers = [
    'Development Status :: 5 - Production/Stable',
    'Intended Audience :: Developers',
    'Natural Language :: English',
    'Programming Language :: Python :: 3',
    'Programming Language :: Python :: 3.11',
]

[tool.poetry.dependencies]
python = "^3.11"
rabbitmq = "^0.2.0"
kombu = "^5.2.4"
loguru = "^0.7.0"
pydantic = {version = "^1.9.1", optional = true}

[tool.poetry.group.dev.dependencies]
ruff = "^0.0.285"
mypy = "^1.0"
black = "^22.3.0"
isort = "^5.10.1"
xenon = "^0.9.0"
ipython = "^8.10.0"
pytest = "^7.1.2"
pytest-mock = "^3.7.0"
pytest-cov = "^3.0.0"

[tool.poetry.extras]
cosmos-schemas = ["pydantic"]

[build-system]
requires = ["poetry-core>=1.0.0", "poetry-dynamic-versioning"]
build-backend = "poetry_dynamic_versioning.backend"

[tool.black]
line-length = 120

[tool.isort]
profile = "black"
multi_line_output = 3
include_trailing_comma = true
force_grid_wrap = 0
use_parentheses = true
ensure_newline_before_comments = true
line_length = 120
skip_gitignore = false
lines_between_types = 1

[tool.mypy]
disallow_untyped_defs = true
show_error_codes = true
warn_unused_ignores = true
ignore_missing_imports = true
plugins = [
    "pydantic.mypy",
]

[tool.ruff]
line-length = 120
show-source = true
target-version = "py311"
select = [
    "F",    # Pyflakes (F)
    "E",
    "W",    # pycodestyle (E, W)
    "C90",  # mccabe (C90)
    # isort (I)
    # pydocstyle (D)
    "UP",   # pyupgrade (UP)
    "N",    # pep8-naming (N)
    "YTT",  # flake8-2020 (YTT)
    # "ANN",  # flake8-annotations (ANN)
    # "S",    # flake8-bandit (S)
    "BLE",  # flake8-blind-except (BLE)
    # flake8-boolean-trap (FBT)
    "B",    # flake8-bugbear (B)
    "A",    # flake8-builtins (A)
    "C4",   # flake8-comprehensions (C4)
    "T10",  # flake8-debugger (T10)
    # flake8-errmsg (EM)
    "ICN",  # flake8-import-conventions (ICN)
    "T20",  # flake8-print (T20)
    # "PT",   # flake8-pytest-style (PT)
    "Q",    # flake8-quotes (Q)
    # flake8-return (RET)
    "SIM",  # flake8-simplify (SIM)
    "TID",  # flake8-tidy-imports (TID)
    "ARG",  # flake8-unused-arguments (ARG)
    "DTZ",  # flake8-datetimez (DTZ)
    "ERA",  # eradicate (ERA) until we can remove commented out code this has to stay deactivated
    # pandas-vet (PD)
    # pygrep-hooks (PGH)
    "PLC",
    "PLE",
    "PLR",
    "PLW",  # Pylint (PLC, PLE, PLR, PLW)
    "RUF",  # Ruff-specific rules (RUF)
]

[tool.ruff.per-file-ignores]
"tests/*" = ["PLR2004", "ARG001"]

[tool.poetry-dynamic-versioning]
enable = true
